--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -27,7 +27,7 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: .
-        file: Dockerfile{{ matrix.platform.suffix }}
+        file: Dockerfile${{ matrix.platform.suffix }}
         target: builder
         tags:
           lofigirl:latest
@@ -38,18 +38,18 @@ jobs:
     - name: Archive production artifact - server
       uses: actions/upload-artifact@v4
       with:
-        name: lofigirl_server_linux_{{ matrix.platform.name }}
+        name: lofigirl_server_linux_${{ matrix.platform.name }}
         path: ${{ github.workspace }}/bin/lofigirl_server
         overwrite: true
     - name: Archive production artifact - client
       uses: actions/upload-artifact@v4
       with:
-        name: lofigirl_client_linux_{{ matrix.platform.name }}
+        name: lofigirl_client_linux_${{ matrix.platform.name }}
         path: ${{ github.workspace }}/bin/lofigirl_client
         overwrite: true
     - name: Archive production artifact - standalone client
       uses: actions/upload-artifact@v4
       with:
-        name: lofigirl_client_standalone_linux_{{ matrix.platform.name }}
+        name: lofigirl_client_standalone_linux_${{ matrix.platform.name }}
         path: ${{ github.workspace }}/bin/lofigirl_client_standalone
         overwrite: true
