--- a/lofigirl_shared_common/Cargo.toml
+++ b/lofigirl_shared_common/Cargo.toml
@@ -9,7 +9,10 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 
+aes-gcm = "0.10"
 anyhow = "1.0"
-thiserror = "1.0"
+base64 = "0.22"
 strsim = "0.11"
+thiserror = "1.0"
 tracing = "0.1"
+typenum = "1.17"
