--- a/lofigirl_flutter_client/pubspec.yaml
+++ b/lofigirl_flutter_client/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   shared_preferences: ^2.0.15
   http: ^1.2.2
   web_socket_channel: ^3.0.1
+  encrypt: ^5.0.3
+  dart_jsonwebtoken: ^2.14.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - secrets.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
