--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -11,6 +11,7 @@ RUN apt install -y build-essential curl libssl-dev clang libclang-dev pkg-config
                    crossbuild-essential-arm64 libopencv-dev:arm64 libssl-dev:arm64 libleptonica-dev:arm64 libtesseract-dev:arm64
 ENV PKG_CONFIG_PATH /usr/lib/aarch64-linux-gnu/pkgconfig/
 ENV PKG_CONFIG_ALLOW_CROSS 1
+ENV DEB_TARGET_MULTIARCH aarch64-linux-gnu
 
 RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
 ENV PATH="/root/.cargo/bin:${PATH}"
