--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -11,6 +11,7 @@ RUN apt install -y build-essential curl libssl-dev clang libclang-dev pkg-config
                    crossbuild-essential-armhf libopencv-dev:armhf libssl-dev:armhf libleptonica-dev:armhf libtesseract-dev:armhf
 ENV PKG_CONFIG_PATH /usr/lib/arm-linux-gnueabihf/pkgconfig/
 ENV PKG_CONFIG_ALLOW_CROSS 1
+ENV DEB_TARGET_MULTIARCH arm-linux-gnueabihf
 
 RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
 ENV PATH="/root/.cargo/bin:${PATH}"
