--- a/lofigirl_web_client/Cargo.toml
+++ b/lofigirl_web_client/Cargo.toml
@@ -21,5 +21,14 @@ seed = "0.10"
 serde-json-wasm = "1.0"
 lofigirl_shared_common = { path = "../lofigirl_shared_common"}
 
+[dependencies.uuid]
+version = "1.16"
+features = ["v4", "rng-getrandom"]
+
+[dependencies.getrandom_v03]
+package = "getrandom"
+version = "0.3"
+features = ["wasm_js"]
+
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ['-Os']
