--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -38,6 +38,8 @@ COPY --from=builder /app/bin/lofigirl_client_standalone /usr/bin/
 RUN dpkg --add-architecture arm64
 RUN apt update
 RUN apt upgrade -y
-RUN apt install -y libopencv-dev:arm64 libleptonica-dev:arm64 libtesseract-dev:arm64 tesseract-ocr-eng
+RUN apt install -y libopencv-dev:arm64 libleptonica-dev:arm64 libtesseract-dev:arm64 tesseract-ocr-eng python3 python3-pip
+
+RUN pip3 install --break-system-packages yt-dlp
 
 ENTRYPOINT [ "lofigirl_server" ]
