--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -38,6 +38,8 @@ COPY --from=builder /app/bin/lofigirl_client_standalone /usr/bin/
 RUN dpkg --add-architecture armhf
 RUN apt update
 RUN apt upgrade -y
-RUN apt install -y libopencv-dev:armhf libleptonica-dev:armhf libtesseract-dev:armhf tesseract-ocr-eng
+RUN apt install -y libopencv-dev:armhf libleptonica-dev:armhf libtesseract-dev:armhf tesseract-ocr-eng python3 python3-pip
+
+RUN pip3 install --break-system-packages yt-dlp
 
 ENTRYPOINT [ "lofigirl_server" ]
