chore: docker syntax consistency for casing

--- a/Dockerfile.archlinux
+++ b/Dockerfile.archlinux
@@ -33,7 +33,7 @@ RUN cargo build --release -p lofigirl_client -p lofigirl_server
 RUN mv ./target/release/lofigirl_client /app/bin/
 RUN mv ./target/release/lofigirl_server /app/bin/
 
-FROM archlinux as runner
+FROM archlinux AS runner
 
 COPY --from=builder /app/bin/lofigirl_client /usr/bin/
 COPY --from=builder /app/bin/lofigirl_server /usr/bin/
