--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -24,7 +24,7 @@ COPY ./ ./
 
 RUN cargo chef prepare --recipe-path recipe.json
 
-FROM base as builder
+FROM base AS builder
 
 COPY --from=planner /app/recipe.json recipe.json
 
@@ -42,7 +42,7 @@ RUN cargo build --release --target armv7-unknown-linux-gnueabihf -p lofigirl_cli
 RUN mv ./target/armv7-unknown-linux-gnueabihf/release/lofigirl_client /app/bin/
 RUN mv ./target/armv7-unknown-linux-gnueabihf/release/lofigirl_server /app/bin/
 
-FROM debian:bookworm as runner
+FROM debian:bookworm AS runner
 
 COPY --from=builder /app/bin/lofigirl_client /usr/bin/
 COPY --from=builder /app/bin/lofigirl_server /usr/bin/
