--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -24,7 +24,7 @@ COPY ./ ./
 
 RUN cargo chef prepare --recipe-path recipe.json
 
-FROM base as builder
+FROM base AS builder
 
 COPY --from=planner /app/recipe.json recipe.json
 
@@ -42,7 +42,7 @@ RUN cargo build --release --target aarch64-unknown-linux-gnu -p lofigirl_client 
 RUN mv ./target/aarch64-unknown-linux-gnu/release/lofigirl_client /app/bin/
 RUN mv ./target/aarch64-unknown-linux-gnu/release/lofigirl_server /app/bin/
 
-FROM debian:bookworm as runner
+FROM debian:bookworm AS runner
 
 COPY --from=builder /app/bin/lofigirl_client /usr/bin/
 COPY --from=builder /app/bin/lofigirl_server /usr/bin/
